Fixed messages not coming in the correct order